--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.title{
+  color:red
+}
+.headerContainer{
+  background-image: url(https://startbootstrap.github.io/startbootstrap-clean-blog/assets/img/home-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 20px;
+ 
+}
+.opacityColor{
+
+  background-color: rgb(0,0,0,0.4);
+  width: 100%;
+  height: 500px;
+  
+}
+.title1{
+  color: white;
+ 
+}
+.navbar{
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.navlinks-container{
+  flex-direction: row;
+}
